--- a/index.html
+++ b/index.html
@@ -2,135 +2,78 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Meu Portfólio</title>
-    <style>
-        /* Estilo geral */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background: #f4f4f9;
-            color: #333;
-        }
-
-        header {
-            background: #222;
-            color: white;
-            text-align: center;
-            padding: 30px 10px;
-            font-size: 24px;
-        }
-
-        header p {
-            font-size: 16px;
-            color: #ccc;
-            margin-top: 5px;
-        }
-
-        .container {
-            max-width: 900px;
-            margin: 40px auto;
-            padding: 20px;
-        }
-
-        .card {
-            background: white;
-            border-radius: 10px;
-            padding: 20px;
-            margin-bottom: 20px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-
-        h2 {
-            color: #222;
-            margin-bottom: 10px;
-        }
-
-        /* Estilo da lista */
-        ul {
-            text-align: left;
-            margin: 10px auto;
-            display: inline-block;
-        }
-
-        /* Quadrado do CSS */
-        .quadrado {
-            width: 100px;
-            height: 100px;
-            background: red;
-            margin: 20px auto;
-            border-radius: 8px;
-        }
-
-        /* Botão */
-        button {
-            background: #007bff;
-            color: white;
-            padding: 10px 20px;
-            font-size: 16px;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: 0.3s;
-        }
-
-        button:hover {
-            background: #0056b3;
-        }
-
-        /* Mensagem JS */
-        #mensagem {
-            margin-top: 15px;
-            font-weight: bold;
-            color: #444;
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>&#128193; Meu Portfolio</title>
+    <link rel="stylesheet" href="https://cdnj.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header>
-        <h1>Meu Portfólio</h1>
-        <p>Exemplos com HTML, CSS e JavaScript</p>
+        <h1>Silvio Printes</h1>
+        <p>Desenvolvedor Front-End | Freelancer</p>
+        <div class="social-icons">
+            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+        </div>
     </header>
 
-    <div class="container">
+<section>
+        <h2>Sobre Mim</h2>
+        <p>Sou um desenvolvedor em formação, apaixonado por tecnologia e criação de sites modernos. Trabalho com HTML, CSS e JavaScript, criando em projetos básicos de HTML, CSS e JavaScript e estou sempre aprendendo.</p>
+</section>
 
-        <!-- Exemplo 1 -->
+<section>
+        <h2>Projetos</h2>
+        <div class="projects">
+            <div class="card">
+                <i class="fas fa-id-card"></i>
+                <h3>Cartão de Apresentação</h3>
+                <p>Projeto de cartão de apresentação online moderno e responsivo.</p>
+            </div>
         <div class="card">
-            <h2>Exemplo 1 - Estrutura HTML</h2>
-            <p>Este é um exemplo simples de HTML com título, parágrafo e lista:</p>
-            <ul>
-                <li>Item 1</li>
-                <li>Item 2</li>
-                <li>Item 3</li>
-            </ul>
+            <i class="fas fa-file-alt"></i>
+            <h3>Formulário de Contato</h3>
+            <p>Formulário funcional estilizado coom ícones do Font Awesome.</p>
         </div>
-
-        <!-- Exemplo 2 -->
         <div class="card">
-            <h2>Exemplo 2 - Estilização com CSS</h2>
-            <p>Este parágrafo está estilizado com CSS.</p>
-            <div class="quadrado"></div>
+            <i class="fas fa-laptop-code"></i>
+            <h3>Portfólio Pessoal</h3>
+            <Portfólio profissional para divulgação no Freelancer.com e GitHub.</p>
         </div>
-
-        <!-- Exemplo 3 -->
-        <div class="card">
-            <h2>Exemplo 3 - Interatividade com JavaScript</h2>
-            <p>Clique no botão abaixo:</p>
-            <button onclick="mostrarMensagem()">Clique aqui!</button>
-            <p id="mensagem"></p>
-        </div>
-
     </div>
+</section>
 
-    <script>
-        function mostrarMensagem() {
-            document.getElementById("mensagem").innerHTML = "Você clicou no botão! 🚀";
-        }
-    </script>
+<section>
+    <h2>Contato</h2>
+    <form>
+        <div class="input-group">
+            <i class="fas fa-user"></i>
+            <input type="text" placeholder="Silvio Printes">  
+        </div>
+        <div class="input-group">
+            <i class="fas fa-envelope"></i>
+            <input type="email" placeholder="printestecnicofreelancer@gmail.com" style="width:200px;">
+        </div>
+        <div class="input-group">
+            <i class="fas fa-comment"></i>
+            <textarea placeholder="Sua Mensagem"></textarea>
+        </div>
+        <button type="submit"><i class="fas fa-paper-plane"></i> Enviar</button>
+    </form>
+</section>
 
+<footer>
+    <p>&copy 2025 - Silvio Printes. Todos os direitos reservados.</p>
+    <div class="footer-icons">
+        <a href="#"><i class="fab fa-github"></i></a>
+        <a href="#"><i class="fab fa-linkedin"></i></a>
+    </div>
+</footer>
 </body>
 </html>
+     
+
 
 
 
